--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
     "@mui/material-nextjs": "^6.1.0",
     "@mui/x-date-pickers": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.7",
